@@ -64,6 +64,7 @@ import java.nio.charset.StandardCharsets;
 import java.nio.file.FileSystem;
 import java.nio.file.FileSystems;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.Arrays;
 import java.util.HashMap;
 import java.util.Map;
@@ -540,7 +541,7 @@ private void initFile(FILE newFP,          // New file pointer
  */
 public static String getPathname(String filename)
 {
-	Path path = Path.of(filename);
+	Path path = Paths.get(filename);
 	return path.getParent().toString();
 }
 	
